Added a dummy image grid

--- a/index.html
+++ b/index.html
@@ -11,9 +11,30 @@
 
 <body>
 
+    <div class="wrapper">
+        <h1>Switch</h1>
+        <div class="img-area">
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+        </div>
+    </div>
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
     </script>
+    <script src="./scripts/main.js"></script>
+
 </body>
 
 </html>
