--- a/index.html
+++ b/index.html
@@ -13,19 +13,9 @@
 
     <div class="wrapper">
         <h1>Switch</h1>
-        <div class="img-area">
+        <div class="img-area" id="gallery">
             <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
-            <div class="single-img"><img src="./assets/camera1.jpg" alt=""></div>
+           
         </div>
     </div>
 
