Added the changes for delete image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
         <h1>Switch</h1>
         <div class="img-area" id="gallery">
-            <div class="single-img">
+            <!-- <div class="single-img">
                 <div class="imgBox">
                     <img src="./assets/camera1.jpg" alt="">
                 </div>
@@ -42,7 +42,7 @@
                     </div>
 
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
