Added a spin button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
     <div class="wrapper">
         <h1>Switch</h1>
+        <div class="spin" id="spinGallery"><a href="#">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Spin
+              </a></div>
         <div class="img-area" id="gallery">
             <!-- <div class="single-img">
                 <div class="imgBox">
