Removed the comments

--- a/index.html
+++ b/index.html
@@ -22,36 +22,7 @@
                 <span></span>
                 Spin
               </a></div>
-        <div class="img-area" id="gallery">
-            <!-- <div class="single-img">
-                <div class="imgBox">
-                    <img src="./assets/camera1.jpg" alt="">
-                </div>
-
-                <div class="details">
-                    <div class="content">
-                        <h2>Hello</h2>
-                            <button><i class="fa fa-trash"></i></button>  
-                        
-                    </div>
-
-                </div>
-            </div>
-            <div class="single-img">
-                <div class="imgBox">
-                    <img src="./assets/camera1.jpg" alt="">
-                </div>
-
-                <div class="details">
-                    <div class="content">
-                        <h2>Hello</h2>
-                        <p>My name is Blaah Blaah </p>
-                    </div>
-
-                </div>
-            </div> -->
-
-        </div>
+        <div class="img-area" id="gallery"></div>
     </div>
 
 
